Update homepage to show full posts with pagination
This is a big structural change from Cupper. I wanted full posts to show on the homepage
with pagination. there is still a list of all posts at /posts but it will not normally
be referenced for the user so I removed it from nav.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   <main id="main">
     <h1>{{ .Title }}</h1>
+    {{ .Content }}
     <ul class="patterns-list">
     {{ range .Pages.ByPublishDate.Reverse }}
       <li>
@@ -12,7 +13,7 @@
             {{ .Title }}
           </a>
         </h2>
-      </li>        
+      </li>
     {{ end }}
     </ul>
   </main>
