--- a/assets/scss/_template-styles.scss
+++ b/assets/scss/_template-styles.scss
@@ -1,10 +1,6 @@
 /* Fonts */
-@font-face {
-    font-family: 'Miriam Libre';
-    src: url('{{ "css/fonts/miriamlibre-bold.woff2" | absURL }}') format('woff2'), url('{{ "css/fonts/miriamlibre-bold.woff" | absURL }}') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css?family=Istok+Web:700|Noto+Sans:400,400i,700,700i&display=swap');
+
 *,
 *::before,
 *::after {
@@ -17,7 +13,7 @@
 }
 html {
     font-size: calc(1em + 0.33vw);
-    font-family: Arial, Helvetica Neue, sans-serif;
+    font-family: 'Noto Sans', Arial, Helvetica Neue, sans-serif;
     line-height: 1.5;
     color: #111;
     background-color: #fefefe;
@@ -115,7 +111,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: Miriam Libre, serif;
+    font-family: 'Istok Web', serif;
     line-height: 1.125;
 }
 h1 {
@@ -130,7 +126,6 @@ h3 {
 h4,
 h5 {
     font-size: 1rem;
-    font-family: PT Sans, sans-serif;
 }
 h5 {
     font-size: 0.85rem;
@@ -445,7 +440,7 @@ caption {
   padding: 0.25em 0.75em;
 }
 #disqus-comments {
-  display: none; 
+  display: none;
 }
 
 /* Pattern lists */
@@ -509,30 +504,9 @@ caption {
 }
 .note.warning {
     border-left: 0;
-    background-image: url({{ "css/images/stripe.svg" | absURL }});
-    background-size: 0.5rem auto;
-    background-repeat: repeat-y;
 }
 .note.warning > div {
     margin-left: 1.25rem;
-}
-
-/* Tick lists */
-.ticks li {
-    list-style: none;
-    position: relative;
-}
-.ticks li::before {
-    content: '';
-    display: inline-block;
-    width: 1rem;
-    height: 1rem;
-    margin-right: 0.25rem;
-    background-image: url({{ "css/images/icon-tick.svg" | absURL }});
-    background-size: 100% auto;
-    position: absolute;
-    left: -1.25rem;
-    top: 0.25rem;
 }
 
 /* Figures */
