--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language.Lang }}">
-  {{ partial "head.html" . }}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    {{ hugo.Generator }}
+    <link rel="canonical" href="{{ .Permalink }}">
+
+    {{ if .IsHome }}
+      {{ with .Site.Params.homeMetaContent }}
+        <meta name="description" content="{{ . | plainify }}">
+      {{ end }}
+    {{ end }}
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
+    {{ if .Site.IsServer }}
+       {{ $style := resources.Get "scss/collector.scss" | resources.ExecuteAsTemplate "style.scss" . | resources.ToCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
+       <link rel="stylesheet" href="{{ ($style).RelPermalink }}">
+    {{ else }}
+       {{ $style := resources.Get "scss/collector.scss" | resources.ExecuteAsTemplate "style.scss" . | resources.ToCSS (dict "targetPath" "css/style.css" "enableSourceMap" false) }}
+       <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
+    {{ end }}
+
+    <style id="inverter" media="none">
+      html { filter: invert(100%) }
+      * { background-color: inherit }
+      img:not([src*=".svg"]), .colors, iframe, .demo-container { filter: invert(100%) }
+    </style>
+
+    {{ $title := print .Title " | " .Site.Title }}
+    {{ if .IsHome }}
+      {{ $title = .Site.Title }}
+    {{ end }}
+    <title>{{ $title }}</title>
+  </head>
   <body>
     <a href="#main">skip to content</a>
     {{ partial "svg.html" . }}
